fix basicLayout; and why can't render images?????

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
+
+
+}
+body #root{
+  height: 100vh;
 }
 
 code {
