--- a/frontend/src/layout/basicLayout.scss
+++ b/frontend/src/layout/basicLayout.scss
@@ -41,6 +41,17 @@
           overflow: hidden;
         }
       }
+      .welcome{
+        font-size: 5vh;
+        line-height: 1.5em;
+        margin-left: 15vw;
+        display: flex;
+        
+        flex-direction: column;
+        justify-content: center;
+        color: beige;
+      }
+
       .loginout-item{
         display: flex;
         width: 10vw;
